# pavis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: audio_handling.h  color_algorithm.h  config_parser.h  e131_client.h  socket_server.h  state_file.h  wled_device_config.h
res/: compile_algorithms.sh  pavis.conf.default  pavis.service
res/algorithms/: simple.template.c  simpleRed.c
src/: audio_handling.c  color_algorithm.c  config_parser.c  e131_client.c  main.c  socket_server.c  state_file.c
